--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # dependencies
 /node_modules
 
+#pics to be used later
+/future_pics
+
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
